--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -17,18 +17,18 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 16;
+shadow-radius = 14;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = 0.58
+shadow-opacity = 0.52
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -10;
+shadow-offset-x = -15;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -4;
+shadow-offset-y = -8;
 
 
 shadow-ignore-shaped = false;
@@ -58,6 +58,7 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "n:e:fcitx",
+  "n:e:fcitx5",
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
@@ -92,7 +93,7 @@ fade-in-step = 0.032;
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
 #fade-out-step = 0.10;
-fade-out-step = 0.014;
+fade-out-step = 0.016;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 #fade-delta = 2
@@ -115,10 +116,10 @@ fade-delta = 8
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.78;
+inactive-opacity = 0.72;
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.88;
+frame-opacity = 0.78;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -127,10 +128,10 @@ inactive-opacity-override = false;
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 #active-opacity = 0.88;
 #当前透明度
-active-opacity = 1;
+active-opacity = 0.92;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
- inactive-dim = 1
+ inactive-dim = 0.7
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
@@ -149,7 +150,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [
   "99:class_g = 'Chromium'",
   "99:class_g = 'Gimp'",
-  "99:class_g = 'Sceenkey'"
+  "99:class_g = 'Sceenkey'",
+  "99:class_g = 'fcitx'",
+  "99:class_g = 'fcitx5'"
 ]
 
 
@@ -162,12 +165,12 @@ opacity-rule = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 11
+corner-radius = 14
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
  "window_type = 'dock'",
-  "window_type = 'desktop'"
+  "window_type = 'desktop'",
 ];
 
 
@@ -211,8 +214,8 @@ blur-background = true
 #
 # blur-kern = ""
 blur-kern = "3x3box";
-#blur-method = "dual_kawase";
-blur-strength = 8;
+blur-method = "dual_kawase";
+blur-strength = 4;
 unredir-if-possible = false
 
 
@@ -235,7 +238,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 #backend = "glx"
-backend = "glx"
+backend = "glx";
 #backend = "xrender";
 
 # Enable/disable VSync.
@@ -278,16 +281,16 @@ refresh-rate = 120;
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
 # provided that the WM supports it.
 #
-# use-ewmh-active-win = false
+ use-ewmh-active-win = true
 
 # Unredirect all windows if a full-screen opaque window is detected,
 # to maximize performance for full-screen windows. Known to cause flickering
 # when redirecting/unredirecting windows.
 #
-# unredir-if-possible = false
+#  unredir-if-possible = false
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
-# unredir-if-possible-delay = 0
+unredir-if-possible-delay = 0.2
 
 # Conditions of windows that shouldn't be considered full-screen for unredirecting screen.
 # unredir-if-possible-exclude = []
@@ -316,7 +319,7 @@ detect-client-leader = true;
 # with a 5x5 one you use `--resize-damage 2`, and so on).
 # May or may not work with *--glx-no-stencil*. Shrinking doesn't function correctly.
 #
-# resize-damage = 1
+resize-damage = 1
 
 # Specify a list of conditions of windows that should be painted with inverted color.
 # Resource-hogging, and is not well tested.
